# myApp

./: .editorconfig  .gitignore  API_SPEC.md  ARCHITECTURE.md  AUDIO_ARCHITECTURE.md  BRANDING_GUIDE.md  Cargo.toml  DATA_MODEL.md  IMPLEMENTATION_PLAN.md  LICENSE  METRONOME_DESIGN.md  README.md  ROADMAP.md  UX_WIREFRAMES.md  WEBRTC_EVALUATION.md  justfile
.github/workflows/: ci.yml
docs/: REQUIREMENTS.md
proto/: Cargo.toml  README.md
proto/src/: auth.rs  frame.rs  lib.rs  participant.rs  snapshot.rs
server/: Cargo.toml
server/src/: config.rs  lib.rs  logging.rs  main.rs
utils/: Cargo.toml
utils/src/: lib.rs
